# epistemic-autoresearch

./: .gitignore  CITATION.cff  EXPERIMENT_CONTRACT.md  README.md  condition_a.py  condition_b.py  condition_c.py  example_theorist.py  harness.py  prepare.py  pyproject.toml  train.py  visuals.py
results/: all_metrics.json
results/phase1/condition_a/: results.tsv  summary.json  train_best.py  train_exp14.py  train_exp15.py  train_exp17.py  train_exp2.py  train_exp3.py  train_exp5.py  train_exp6.py
results/phase1/condition_b/: reflections.md  results.tsv  train_best.py  train_exp0.py
results/phase1/condition_c/: lab_notebook.md  results.tsv  theory.md
results/phase2/condition_a/: results.tsv  train_exp1.py  train_exp15.py  train_exp2.py  train_exp3.py  train_exp4.py  train_exp6.py  train_exp7.py
results/phase2/condition_b/: reflections.md  results.tsv
results/phase2/condition_c/: lab_notebook.md  results.tsv  theory.md  train_exp1_best.py
