[project]
name = "autoresearch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.5",
]

[project.optional-dependencies]
train = [
    "torch>=2.1",
    "datasets>=2.14",
]
llm = [
    "litellm>=1.0",
]
all = [
    "torch>=2.1",
    "tiktoken>=0.5",
    "datasets>=2.14",
    "litellm>=1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["train", "prepare", "harness", "condition_a", "condition_b", "condition_c"]
